--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>David Chu's China Bistro</h1></a>
+            <a href="index.html"><h1>David China Bistro</h1></a>
             <p>
               <img src="images/star-k-logo.png" alt="Kosher certification">
-              <span>Kosher Certified</span>
+              <span>5 star</span>
             </p>
           </div>
 
@@ -55,7 +55,7 @@
             </li>
             <li id="phone" class="hidden-xs">
               <a href="tel:410-602-5008">
-                <span>410-602-5008</span></a><div>* We Deliver</div>
+                <span>987-654-321</span></a><div>* We Deliver</div>
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
@@ -95,7 +95,7 @@
           <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
         </section>
       </div>
-      <div class="text-center">&copy; Copyright David Chu's China Bistro 2016</div>
+      <div class="text-center">&copy; Copyright David  China Bistro 2016</div>
     </div>
   </footer>
 
